k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: APP_NAME-service
spec:
  selector:
    app: APP_NAME-placeholder
  ports:
    - port: 80
      targetPort: 9000
  type: ClusterIP
